feat: usabilidade formulario

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,10 @@
       "prettier"
     ],
     "rules": {
+      "@typescript-eslint/no-explicit-any": "off",
+      "no-shadow":"off",
+      "@typescript-eslint/ban-types": "off",
+
 			"react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
       "react/jsx-props-no-spreading": "off",
