--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
       "@typescript-eslint/no-explicit-any": "off",
       "no-shadow":"off",
       "@typescript-eslint/ban-types": "off",
+      "react/prop-types": "off",
 
 			"react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
